- fixed animations in product, no animation on mobile devices

--- a/css/product.css
+++ b/css/product.css
@@ -4,11 +4,11 @@
 
 @keyframes titleIn {
     0% {
-        transform: translateY(20px););
+        transform: translateY(20px);
         opacity: 0;
     }
     100% {
-        transform: translateY(40px));
+        transform: translateY(40px);
         opacity: 1;
     }
 }
@@ -48,21 +48,26 @@
     font-size: 2em;
 }
 
-.neon:hover,
-.neon-blick {
-    transition-duration: 80ms;
-    transform: scale(1.02);
-    color: white;
-    text-shadow:
-    0 0 5px white,
-    0 0 10px white,
-    0 0 20px white,
-    0 0 40px rgb(250, 175, 24),
-    0 0 70px rgb(250, 175, 24),
-    0 0 80px rgb(250, 175, 24),
-    0 0 100px rgb(250, 175, 24),
-    0 0 150px rgb(250, 175, 24);
+
+@media (min-width: 1024px) {
+    .neon:hover,
+    .neon-blick {
+        transition-duration: 80ms;
+        transform: scale(1.02);
+        color: white;
+        text-shadow:
+                0 0 5px white,
+                0 0 10px white,
+                0 0 20px white,
+                0 0 40px rgb(250, 175, 24),
+                0 0 70px rgb(250, 175, 24),
+                0 0 80px rgb(250, 175, 24),
+                0 0 100px rgb(250, 175, 24),
+                0 0 150px rgb(250, 175, 24);
+    }
 }
+
+
 
 .product-list {
    font-size: 14px;
@@ -80,3 +85,4 @@
     clear: both;
     display: block;
 }
+
